Fri Jul 11 16:45:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (gvar): make global/static variables list.

Fri Jul 11 15:01:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_run_exec_options): default to thread cwd.

Fri Jul 11 06:45:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (rb_thread_t): per-thread cwd support.  [EXPERIMENTAL]

	* io.c (rb_sysopen), dir.c (dir_s_chdir),
	  file.c (ruby_readlink, ruby_absolute_path_p),
	  thread.c (thread_create_core, ruby_thread_getcwd, ruby_getcwd),
	  vm.c (Init_VM): ditto.

	* string.c (rb_str_wrap): wrap a heap pointer with string.

	* thread.c (ruby_system_alone): returns if only current VM is running.

Fri Jul 11 06:44:06 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (fcntl.h): needed for AT_FDCWD.

	* dir.c (rb_dir_mkdir, rb_dir_unlink, rb_dir_rmdir): fix for dirfd().

Mon Jul  7 02:11:34 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (rb_dir_open, rb_dir_fchmod, rb_dir_lchmod, rb_dir_fchown),
	  (rb_dir_lchown, rb_dir_fstat, rb_dir_lstat, rb_dir_utime),
	  (rb_dir_mkdir, rb_dir_rmdir, rb_dir_unlink, rb_dir_chdir): added.

	* file.c (rb_file_stat_new, rb_stat, ruby_futimesat): made public.

	* io.c (rb_openat): added.

Mon Jul  7 02:04:57 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_s_chdir): restore cwd by fchdir if possible.

Mon Jul  7 00:35:10 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (big2str_power_cache): moved to VM specific data.

Mon Jul  7 00:17:21 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (struct argf): use defin and defout instead of rb_stdin and
	  rb_stdout which are process global.

Mon Jul  7 00:00:21 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/public_object.h: moved global variables to VM specific data.

Wed Oct 20 21:07:24 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* tool/file2lastrev.rb (self.output): git support.

	* version.h: ditto.
