@@ -1,3 +1,8 @@
+Thu Jul 17 06:09:48 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* dir.c (get_cwd_fd): support for platforms which has fchdir but no
+	  openat.
+
 Fri Jul 11 16:45:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* Makefile.in (gvar): make global/static variables list.
